--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  #- title: "Talks"
-  #  url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
@@ -19,4 +19,4 @@ main:
     url: /cv/
     
   - title: "Guide"
-   url: /markdown/
+    url: /markdown/
